--- a/operations/wrangling/qualgeoimage.ipynb
+++ b/operations/wrangling/qualgeoimage.ipynb
@@ -804,7 +804,7 @@
         "    csv_file = data_input.filename\n",
         "    dzc_file = ''\n",
         "    \n",
-        "new_file = suaveint.save_csv_file(updated_df, absolutePath, csv_file)"
+        "new_file = suaveint.save_csv_file(df, absolutePath, csv_file)"
       ]
     },
     {
@@ -933,6 +933,16 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "34939d65",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install papermill > /dev/null"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "7c3fdad3",
       "metadata": {
         "id": "7c3fdad3",
@@ -946,7 +956,44 @@
         "tags": []
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import papermill as pm\n",
+        "from subprocess import getoutput\n",
+        "from IPython.display import HTML\n",
+        "from IPython.display import display\n",
+        "\n",
+        "chosen_nb_name = 'holoviz/holoviz.ipynb'\n",
+        "path = '/content/drive/MyDrive/suave/'\n",
+        "specific = 'myclone/operations/'+chosen_nb_name\n",
+        "base_url = 'https://colab.research.google.com'\n",
+        "opath = path+chosen_nb_name.split('/')[-1]\n",
+        "\n",
+        "parameters = {'user':user, \n",
+        "              'csv':csv, \n",
+        "              'params':params, \n",
+        "              'dzc':dzc, \n",
+        "              'activeobject':activeobject, \n",
+        "              'surveyurl':surveyurl,\n",
+        "              'view':view,\n",
+        "              'full_notebook_url':full_notebook_url,\n",
+        "              'csv_file': csv_file,\n",
+        "              'dzc_file': dzc_file,\n",
+        "              'active_object': active_object,\n",
+        "              'survey_url': survey_url,\n",
+        "              'views':views}\n",
+        "\n",
+        "try:\n",
+        "    pm.execute_notebook(\n",
+        "        input_path=specific,\n",
+        "        output_path=opath,\n",
+        "        parameters=parameters,\n",
+        "        prepare_only=True,\n",
+        "    )\n",
+        "    fid = getoutput(f\"xattr -p 'user.drive.id' '{opath}' \")\n",
+        "    display( HTML(f\"<br><br><hr><br><a href=https://colab.research.google.com/drive/{fid} target=_blank><b>Click here to run notebook</b></a>\") )\n",
+        "except Exception as e:\n",
+        "    print( e )\n"
+      ]
     }
   ],
   "metadata": {
