--- a/operations/wrangling/qualgeoimage.ipynb
+++ b/operations/wrangling/qualgeoimage.ipynb
@@ -95,7 +95,7 @@
         "drive.mount('/content/drive')\n",
         "\n",
         "!rm -rf myclone\n",
-        "!git clone --depth 1 \"https://github.com/DDDyylan/Suave_on_Colab.git\" myclone\n",
+        "!git clone --depth 1 \"https://github.com/SteveLamont/Suave_on_Colab.git\" myclone\n",
         "\n",
         "%cd /content/myclone/helpers\n",
         "!git pull\n",
@@ -908,36 +908,13 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "34ec970f",
-      "metadata": {
-        "id": "34ec970f",
-        "papermill": {
-          "duration": null,
-          "end_time": null,
-          "exception": null,
-          "start_time": null,
-          "status": "pending"
-        },
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "nb_name = 'holoviz/holoviz.ipynb'\n",
-        "import webbrowser\n",
-        "url1 = ('{base_url}/operations/{nb_name}?'+'surveyurl=' + survey_url + '&' + 'user='+user+'&'+'csv='+new_file.split('/')[-1]+'&'+'dzc='+dzc_file+\"&\"+'activeobject=null').format(base_url=base_url, nb_name=nb_name)\n",
-        "\n",
-        "printmd(\"<b><span style='color:red'>Click the URL to open the selected notebook:</span></b>\")\n",
-        "print(url1)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "34939d65",
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip install papermill > /dev/null"
+        "!pip install papermill > /dev/null\n",
+        "!apt-get install xattr > /dev/null\n",
+        "%cd /content"
       ]
     },
     {
